# system_design

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  dev.sh  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
cmake/: CPM.cmake
docs/superpowers/specs/design/: 00-overview.md  01-component-model.md  02-scripting-language.md  03-simulation-engine.md  04-problem-format.md  05-web-client.md  06-backend.md  07-phased-mvp.md  08-code-standards.md  09-concurrency-model.md
src/: main.cpp
src/bridge/: bridge.cpp  bridge.h  wasm_main.cpp
src/components/: cache.cpp  cache.h  client.cpp  client.h  database.cpp  database.h  http_server.cpp  http_server.h  load_balancer.cpp  load_balancer.h
src/engine/: clock.cpp  clock.h  component.cpp  component.h  event.cpp  event.h  event_queue.cpp  event_queue.h  fiber_runtime.cpp  fiber_runtime.h  graph.cpp  graph.h  simulation_engine.cpp  simulation_engine.h  test_result.h  test_runner.cpp  test_runner.h  version.cpp  version.h
src/lang/: ast.h  environment.cpp  environment.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h  value.cpp  value.h
tests/bridge/: bridge_test.cpp
tests/components/: component_test.cpp
tests/engine/: event_queue_test.cpp  fiber_runtime_test.cpp  placeholder_test.cpp  simulation_engine_test.cpp  test_runner_test.cpp
tests/lang/: interpreter_test.cpp  lexer_test.cpp  parser_test.cpp  value_test.cpp
tests/web/: graph-editor.test.mjs  jsdom-setup.mjs  problem-loader.test.mjs  wasm-bridge.test.mjs
web/: docs.html  index.html  serve.py  systemforge.js  workspace.html
web/css/: docs.css  home.css  shared.css  style.css  workspace.css
web/js/: app.js  code-editor.js  graph-editor.js  problem-loader.js  route-editor.js  schema-editor.js  theme.js  wasm-bridge.js
